--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "serve -o",
+    "start": "ng serve -o",
     "build": "ng build",
+    "delete:docs": "del docs",
+    "copy:dist": "copyfiles dist/bases/* && copyfiles dist/bases/browser/* ./docs -f",
+    "build:github": "npm run delete:docs && ng build && npm run copy:dist",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
@@ -29,6 +32,8 @@
     "@angular/compiler-cli": "^17.3.0",
     "@types/jasmine": "~5.1.0",
     "@types/uuid": "^10.0.0",
+    "copyfiles": "^2.4.1",
+    "del-cli": "^6.0.0",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
