--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "ng build",
     "delete:docs": "del docs",
     "copy:dist": "copyfiles dist/bases/* && copyfiles dist/bases/browser/* ./docs -f",
-    "build:github": "npm run delete:docs && ng build && npm run copy:dist",
+    "build:github": "npm run delete:docs && npm run build:href && npm run copy:dist",
+    "build:href": "ng build --base-href ./",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
@@ -32,7 +33,6 @@
     "@angular/compiler-cli": "^17.3.0",
     "@types/jasmine": "~5.1.0",
     "@types/uuid": "^10.0.0",
-    "copyfiles": "^2.4.1",
     "del-cli": "^6.0.0",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
